# yamdb

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: yamdb_workflow.yml
api/: filters.py  permissions.py  serializers.py  urls.py  views.py
api/schemas/: auth.py  categories.py  comments.py  genres.py  reviews.py  titles.py  users.py
nginx/: default.conf
reviews/: models.py
reviews/management/commands/: importcsv.py
reviews/migrations/: 0001_initial.py  0002_initial.py  0002_remove_title_genre_title_genre.py
users/: models.py
users/migrations/: 0001_initial.py  0002_alter_user_role.py
yamdb/: asgi.py  settings.py  urls.py  wsgi.py
